--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cmmaa
+name: cmma_admin
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -27,17 +27,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^3.1.6
-  csv: ^5.0.1
-  cupertino_icons: ^1.0.2
-  file_picker: ^4.3.1
-  firebase_auth: ^3.3.5
-  firebase_core: ^1.11.0
   flutter:
     sdk: flutter
-  google_sign_in: ^5.2.3
+  cupertino_icons: ^1.0.2
+  cloud_firestore: ^3.1.6
+  firebase_auth: ^3.3.5
+  firebase_core: ^1.11.0
+  csv: ^5.0.1
+  file_picker: ^4.3.1
   horizontal_data_table: ^3.6.0
-  provider: ^6.0.2
 
 dev_dependencies:
 
