--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   csv: ^5.0.1
   file_picker: ^4.3.1
   horizontal_data_table: ^3.6.0
-  firebase_core_desktop: ^0.1.1-dev.3
-  firebase_auth_desktop: ^0.1.1-dev.3
+  firedart: ^0.9.0+1
 
 dev_dependencies:
 
